# httpx-negotiate-sspi

./: .gitignore  README.md  mypi.ini  pyproject.toml
httpx_negotiate_sspi/: __init__.py  sspi.py
