[tool.poetry]
name = "httpx-negotiate-sspi"
version = "0.26.1-alpha.1"
description = "SSPI authentication for httpx"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "httpx_negotiate_sspi" },
]
repository = "https://github.com/rob-blackbourn/httpx-negotiate-sspi"

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = ">=223"
httpx = "> 0.16, < 0.27"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0"
pylint = "^2.17"
mypy = "^1.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
